# relembra-tvp

./: CMakeLists.txt  appveyor.yml  compilar.yml
.github/workflows/: cmake-multi-platform.yml  makefile.yml
cmake/Modules/: FindCrypto++.cmake  FindMySQL.cmake
src/: CMakeLists.txt  account.h  actions.cpp  actions.h  ban.cpp  ban.h  baseevents.cpp  baseevents.h  battlepass.cpp  battlepass.h  bed.cpp  bed.h  chat.cpp  chat.h  combat.cpp  combat.h  condition.cpp  condition.h  configmanager.cpp  configmanager.h  connection.cpp  connection.h  const.h  container.cpp  container.h  creature.cpp  creature.h  creatureevent.cpp  creatureevent.h  cylinder.cpp  cylinder.h  database.cpp  database.h  databasemanager.cpp  databasemanager.h  databasetasks.cpp  databasetasks.h  definitions.h  depotlocker.cpp  depotlocker.h  (+121 more)
vc14/: CMakeCache.txt  Makefile  cmake_install.cmake  theforgottenserver.vcxproj
